juicy-jaguars/Web95/Web95/static/css/main.css
@font-face {
    font-family: 'Microsoft Sans Serif';
    src: url('/static/fonts/MicrosoftSansSerif.woff2') format('woff2'),
        url('/static/fonts/MicrosoftSansSerif.woff') format('woff');
    font-weight: normal;
    font-style: normal;
    font-display: swap;
}

body {
    padding-bottom: 0;
    overflow: hidden;
    height: 100vh;
}

.taskbar {
    position: absolute;
    width: 100%;
    margin: 0 !important;
    bottom: 0;
}

#start-menu {
    width: 250px;
    height: 350px;
    position: absolute;
}

.start-table {
    width: 100%;
    height: 100%;
    margin: 0;
    padding: 0;
}

.start-banner {
    font-family: "Microsoft Sans Serif", sans-serif;
    font-size: 30px;
    -moz-transform: rotate(180deg);
    writing-mode: vertical-lr;
    width: 45px;
    height: 100%;
    background-color: #7f817e;
    color: white;
    vertical-align: top;
}

.start-banner b {
    color: #bbb;
    font-weight: 900;
}

.start-item {
    vertical-align: middle;
    margin: 0;
    display: inline-block;
    width: 100%;
    height: 49px;
}

.start-item p {
    margin: 0;
    display: inline-block;
    height: 100%;
    vertical-align: center;
}

.start-level1-thumbnail {
    display: inline-block;
    height: 47px;
}

.start-more {
    display: inline-block;
    position: absolute;
    right: 0;
    margin-top: 13.5px;
    margin-bottom: 13.5px;
}

.start-level1-sep {
    margin: 0;
    border: 1px inset;
}

.nav-link-icon {
    padding: 0 !important;
    opacity: 1 !important;
}

.start-icon {
    opacity: 1 !important;
}

.header-icon {
    height: 16px;
    width: auto;
}

.window-btn {
    height: 20px;
    width: 20px;
    margin: -2px 2px -2px 2px;
    padding: 0;
    float:right;
    border-width: 0;
}

.window-btn::before {
    border-width: 1px;
}

.window-btn-pressed-active::before {
    border-width: 0px;
}

.navbar-sep {
    border-left:1px solid #000;
    height: 20px;
    margin-left: 5px;
    margin-right: 10px;
}

.app-bar {
    list-style-type: none;
    margin: -5px 0 0 10px;
    padding: 0;
}

.app-bar li {
    display: inline-block;
    padding-right: 3px;
    padding-left: 3px;
}

.app-bar li:hover {
    background-color: #000181;
    color: white;
}

.app-bar-underline {
    margin: 2px 0 1px 0;
    border-style: inset;
    border-width: 1px;
}

.ie-btn-sq {
    height: 22px;
    width: 22px;
    margin: 0;
    padding: 0;
    border-width: 0;
}

.ie-btn-sm {
    height: 18px;
    width: 20px;
    padding: 0;
    border: 0;
    margin: 0;
    float:right;
    margin: -18px 0 0 0;
}

.ie-spacer {
    width: 5px;
}

.ie-address-bar {
    display: inline;
    margin: 0 10px 0 10px;
}

.ie-address-bar-label {
    display: inline;
    margin: 0 5px 0 0;
    width: 10%;
}

.ie-address-bar-container {
    border: 2px inset grey;
    background-color: white;
    width:90%;
    height: 22px;
    padding: 0;
    margin: 0;
    display: inline-block;
}

.ie-address-bar-field {
    display: block;
    height: 18px;
    border: 0;
    margin: 0;

}

.ie-content {
    border-width: 2px;
    border-style: inset;
    margin: 3px;
    background-color: white;
}

